[gd_scene load_steps=2 format=3 uid="uid://u120goke01kr"]

[ext_resource type="Script" path="res://edit_star.gd" id="1_vbhly"]

[node name="EditStar" type="Control" groups=["edit"]]
custom_minimum_size = Vector2(200, 250)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vbhly")

[node name="EditLabel" type="Label" parent="."]
offset_left = 62.0
offset_top = 150.0
offset_right = 184.0
offset_bottom = 173.0
text = "Edit Velocity"

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 20.0
offset_top = 150.0
offset_right = 64.0
offset_bottom = 174.0

[node name="VLabel" type="Label" parent="."]
visible = false
offset_left = 42.0
offset_top = 30.0
offset_right = 164.0
offset_bottom = 53.0
text = "Edit Velocity"

[node name="Velocity" type="HSlider" parent="."]
visible = false
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 40.0
grow_horizontal = 2
max_value = 500.0

[node name="RLabel" type="Label" parent="."]
visible = false
offset_left = 42.0
offset_top = 80.0
offset_right = 176.0
offset_bottom = 103.0
text = "Edit Randomness"

[node name="Range" type="HSlider" parent="."]
visible = false
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 50.0
offset_right = 75.0
offset_bottom = 90.0
grow_horizontal = 2
max_value = 500.0

[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="drag_ended" from="Velocity" to="." method="_on_velocity_drag_ended"]
[connection signal="drag_ended" from="Range" to="." method="_on_range_drag_ended"]
